--- a/about/me/index.html
+++ b/about/me/index.html
@@ -5,7 +5,7 @@
     <div class="base-body"><section id="header" class="site header">
     <div class="header wrap"><span class="header left-side"><a class="site home" href="/"><span class="site name">harley's note</span></a></span>
         <span class="header right-side"><div class="nav wrap"><nav class="nav"><a class="nav item" href="/tags/">Tags</a><a class="nav item" href="/about/me">About</a></nav></div></span></div></section><div id="content"><section class="article header">
-    <h1 class="article title"></h1></section><article class="article markdown-body"><p>一个程序员，创过业，一直从事 GIS 相关的工作，日常使用最多的语言是 Java ，最近越来越喜欢用Golang，Python 写东西，最喜欢的数据库是 PostgreSQL 。</p>
+    <h1 class="article title"></h1></section><article class="article markdown-body"><p>一名程序员，4年创业经历，工作中经常与 GIS 打交道，虽然不是 GIS 专业的。。。日常使用最多的语言是 Java ，最近越来越喜欢用Golang，Python 写东西，最喜欢的数据库是 PostgreSQL 。</p>
 </article></div><section id="footer" class="footer"><div class="footer-wrap">
     <p class="copyright">©2014-2020 Harley</p>
     <p class="powerby"><span>Powered by </span><a href="https://gohugo.io" 
